--- a/apps/mail/assets/css/mail-list.css
+++ b/apps/mail/assets/css/mail-list.css
@@ -1,5 +1,5 @@
 .list-container {
-    margin-top: 54px;
-    font-size: 13px;
-    margin-left: 10px;
+  margin-top: 54px;
+  font-size: 13px;
+  margin-left: 50px;
 }
