--- a/apps/mail/assets/css/mail-side-bar.css
+++ b/apps/mail/assets/css/mail-side-bar.css
@@ -1,164 +1,167 @@
 .side-bar {
-    width: 25px;
-    height: 100%;
-    position: relative;
+  width: 25px;
+  height: 100%;
+  position: relative;
 }
 
 .side-bar a {
-    text-decoration: none;
-    color: unset;
+  text-decoration: none;
+  color: unset;
 }
 
 .side-bar a div {
-    height: 100%;
+  height: 100%;
 }
 
 .fixed-pos-side-bar {
-    position: fixed;
-    margin-right: 10px;
+  position: fixed;
+  margin-right: 10px;
 }
 
 .side-bar .compose-container {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    top: 0;
-    left: 8px;
-    right: 103px;
-    width: 48px;
-    height: 48px;
-    line-height: 32px;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-    border-radius: 24px;
-    font-size: 14px;
-    color: #202124;
-    letter-spacing: 0.25px;
-    padding: 13px;
-    cursor: pointer;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 8px;
+  right: 103px;
+  width: 48px;
+  height: 48px;
+  line-height: 32px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  border-radius: 24px;
+  font-size: 14px;
+  color: #202124;
+  letter-spacing: 0.25px;
+  padding: 13px;
+  cursor: pointer;
 }
 
 .side-bar .compose-container:hover {
-    box-shadow: rgba(60, 64, 67, 0.438) 0px 1px 2px 0px, rgba(60, 64, 67, 0.438) 0px 1px 9px 1px;
-    background-color: rgba(60, 64, 67, 0.027);
+  box-shadow: rgba(60, 64, 67, 0.438) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.438) 0px 1px 9px 1px;
+  background-color: rgba(60, 64, 67, 0.027);
 }
 
 .side-bar .compose-img {
-    width: 32px;
-    height: 32px;
-
+  width: 32px;
+  height: 32px;
 }
 
 .side-bar .compose-container span {
-    font-size: 14px;
-    font-weight: 600;
-    padding-left: 14px;
-    padding-right: 14px;
-    display: none;
+  font-size: 14px;
+  font-weight: 600;
+  padding-left: 14px;
+  padding-right: 14px;
+  display: none;
 }
 
 .side-bar .folders-container {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 59px;
-    left: 0;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 59px;
+  left: 0;
+  /* width: 100%; */
 }
 
-.side-bar .folders-container>* {
-    width: 202px;
-    height: 32px;
+.side-bar .folders-container > * {
+  width: 66px;
+  height: 32px;
 }
 
 .side-bar .folder {
-    display: flex;
-    align-items: center;
-    gap: 17px;
-    padding-left: 22px;
-    padding-right: 16px;
-    width: 100%;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 17px;
+  padding-left: 22px;
+  padding-right: 16px;
+  width: 100%;
+  cursor: pointer;
 }
 
 .side-bar .content {
-    color: #202124;
-    display: none;
-    width: 80%;
-    font-size: 14px;
-    text-align: left;
+  color: #202124;
+  display: none;
+  width: 80%;
+  font-size: 14px;
+  text-align: left;
 }
 
 .side-bar a.active .inbox-folder .content.inbox-content {
-    color: #d93025;
+  color: #d93025;
 }
 
 .side-bar a.active .inbox-folder .inbox-img {
-    content: url("../img/inbox-icon.png");
+  content: url('../img/inbox-icon.png');
 }
 
 .side-bar a.active .folder .content {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 .side-bar .amount {
-    display: none;
+  display: none;
 }
 
 .side-bar .side-img {
-    object-fit: contain;
+  object-fit: contain;
 }
 
 /* //MQ */
 
 @media (min-width: 630px) {
+  .fixed-pos-side-bar {
+    width: 260px;
+  }
 
-    .fixed-pos-side-bar {
-        width: 260px;
-    }
+  .side-bar {
+    width: 175px;
+    margin-right: 25px;
+  }
 
-    .side-bar {
-        width: 260px;
-        margin-right: 10px;
-    }
+  .side-bar a:not(.active) .folder:hover {
+    background-color: #e8eaed94;
+    border-start-end-radius: 25px;
+    border-end-end-radius: 25px;
+    padding-right: 16px;
+  }
 
-    .side-bar a:not(.active) .folder:hover {
-        background-color: #e8eaed94;
-        border-start-end-radius: 25px;
-        border-end-end-radius: 25px;
-        padding-right: 16px;
-    }
+  .side-bar .content {
+    display: flex;
+    justify-content: space-between;
+  }
+  .side-bar .folders-container > * {
+    width: 238px;
+    height: 32px;
+  }
 
-    .side-bar .content {
-        display: flex;
-        justify-content: space-between;
-    }
+  .side-bar .amount {
+    display: flex;
+    justify-content: flex-end;
+  }
 
-    .side-bar .amount {
-        display: flex;
-        justify-content: flex-end;
-    }
+  .side-bar a.active .inbox-folder {
+    background-color: #fce8e6;
+    border-start-end-radius: 25px;
+    border-end-end-radius: 25px;
+    padding-right: 16px;
+  }
 
-    .side-bar a.active .inbox-folder {
-        background-color: #fce8e6;
-        border-start-end-radius: 25px;
-        border-end-end-radius: 25px;
-        padding-right: 16px;
-    }
+  .side-bar a.active .folder:not(.inbox-folder) {
+    background-color: #e8eaed;
+    border-start-end-radius: 25px;
+    border-end-end-radius: 25px;
+    padding-right: 16px;
+  }
 
-    .side-bar a.active .folder:not(.inbox-folder) {
-        background-color: #e8eaed;
-        border-start-end-radius: 25px;
-        border-end-end-radius: 25px;
-        padding-right: 16px;
-    }
+  .side-bar .compose-container {
+    width: 145px;
+  }
 
-    .side-bar .compose-container {
-        width: 145px;
-    }
-
-    .side-bar .compose-container span {
-        display: unset;
-    }
-
+  .side-bar .compose-container span {
+    display: unset;
+  }
 }
