--- a/assets/css/cmps/about.css
+++ b/assets/css/cmps/about.css
@@ -47,8 +47,8 @@
 
 @media (max-width: 800px) {
   .about {
-    flex-direction: column;
-    height: 90vh;
+    height: 100vh;
+    display: unset;
   }
 
   .about-us-container {
